--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <div id="top-strip-container" class="transparent">
       <div id="top-strip" class="section-container">
         <div id="logo">
-          <img src="" alt="" class="" />
           <a class="main" href="/index.html"
             ><img
               class="white-logo"
@@ -36,17 +35,20 @@
         <div id="navigation-wrapper">
           <div class="menu-links-wrapper">
             <div class="menu-links">
-              <div data-menu-index="0" class="menu-link">
+              <div data-menu-index="0" class="menu-link selected">
+                <a href="/aboutUs.html">Home</a>
+              </div>
+              <div data-menu-index="1" class="menu-link">
                 <a href="/aboutUs.html">About Us</a>
               </div>
-              <div data-menu-index="1" class="menu-link">Scholars</div>
-              <div data-menu-index="2" class="menu-link">
+              <div data-menu-index="2" class="menu-link">Scholars</div>
+              <div data-menu-index="3" class="menu-link">
                 Impact
               </div>
-              <div data-menu-index="3" class="menu-link">
+              <div data-menu-index="4" class="menu-link">
                 News
               </div>
-              <div data-menu-index="4" class="menu-link">
+              <div data-menu-index="5" class="menu-link">
                 <a href="/index.html">Apply</a>
               </div>
               <div data-menu-index="5" class="menu-link"><a href="">Login</a></div>
