--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                       class="leading-text header-text"
                     >
                       <!-- --- -->
-                      Sponsoring the NEXT <br> GENERATION of <br>
+                      Sponsoring the <br> NEXT GENERATION <br> of
                       African Leaders
                     </span>
                     <span id="banner-small-text" class="tagline">
