--- a/index.html
+++ b/index.html
@@ -51,8 +51,34 @@
               <div data-menu-index="5" class="menu-link">
                 <a href="/index.html">Apply</a>
               </div>
-              <div data-menu-index="5" class="menu-link"><a href="">Login</a></div>
+              <div data-menu-index="6" class="menu-link"><a href="">Login</a></div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="menu-wrapper" class="modal">
+      <div class="mobile-menu-container">
+        <div class="mobile-menu-links-wrapper">
+          <div class="mobile-menu-links">
+            <div data-mobile-menu-index="0" class="mobile-menu-link">
+              <a href="/aboutUs.html">Home</a>
+            </div>
+            <div data-mobile-menu-index="1" class="mobile-menu-link">
+              <a href="/aboutUs.html">About Us</a>
+            </div>
+            <div data-mobile-menu-index="2" class="mobile-menu-link">Scholars</div>
+            <div data-mobile-menu-index="3" class="mobile-menu-link">
+              Impact
+            </div>
+            <div data-mobile-menu-index="4" class="mobile-menu-link">
+              News
+            </div>
+            <div data-mobile-menu-index="5" class="mobile-menu-link">
+              <a href="/index.html">Apply</a>
+            </div>
+            <div data-mobile-menu-index="6" class="mobile-menu-link"><a href="">Login</a></div>
           </div>
         </div>
       </div>
