--- a/index.html
+++ b/index.html
@@ -267,14 +267,10 @@
     <div class="section-wrapper">
       <section id="impact-section" class="split-row section-container">
         <div class="row-half left master">
-          <!-- <img
-            src="/assets/homepage_about_us_image.svg"
-            alt="About Us Image."
-          /> -->
-          <div class="home-svg">
-            <div class="left-part svg-part"></div>
-            <div class="middle-part svg-part"></div>
-            <div class="right-part svg-part"></div>
+          <div class="svg-group">
+            <div class="main-image">
+              <div class="top-right"></div>
+            </div>
           </div>
         </div>
         <div class="row-half right">
