updoot9 :~] update about page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="menu-links-wrapper">
             <div class="menu-links">
               <div data-menu-index="0" class="menu-link selected">
-                <a href="/aboutUs.html">Home</a>
+                <a href="/index.html">Home</a>
               </div>
               <div data-menu-index="1" class="menu-link">
                 <a href="/aboutUs.html">About Us</a>
@@ -63,7 +63,7 @@
         <div class="mobile-menu-links-wrapper">
           <div class="mobile-menu-links">
             <div data-mobile-menu-index="0" class="mobile-menu-link">
-              <a href="/aboutUs.html">Home</a>
+              <a href="/index.html">Home</a>
             </div>
             <div data-mobile-menu-index="1" class="mobile-menu-link">
               <a href="/aboutUs.html">About Us</a>
