updoot 11 ;)... minor updates

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -10,7 +10,7 @@
     />
     <link rel="icon" href="images/Asset%202.svg" />
 
-    <!--Import Google Icon Font-->
+    
     <link rel="stylesheet" href="/styles/about.css" />
   </head>
   <body>
@@ -53,7 +53,7 @@
                   News
                 </div>
                 <div data-menu-index="5" class="menu-link">
-                  <a href="/index.html">Apply</a>
+                  <a href="/application.html">Apply</a>
                 </div>
                 <div data-menu-index="6" class="menu-link"><a href="">Login</a></div>
               </div>
@@ -96,6 +96,49 @@
         </div>
       </section>
 
+      <div class="section-wrapper">
+        <section id="about-section" class="section-container split-row">
+          <div id="about-tab" class="row-half left">
+            <div class="about-tabs">
+              <div data-tab="1" class="about-tab selected">About Us</div>
+              <div data-tab="2" class="about-tab">Project Timeline</div>
+            </div>
+          </div>
+          <div id="about-tab-details" class="row-half right wider-master">
+            <div data-tab-target="1" class="selected">
+              <div class="image">
+
+              </div>
+              <div class="header-text medium-text">
+                About Us
+              </div>
+              <div class="details-paragraph">
+                <p>
+                  There are many determined and talented, low-income students in Nigeria 
+                  who only require financial resources and access to information to better 
+                  their educational future. The United States Embassy, Nigeria seeks to 
+                  identify academically qualified and highly motivated, low-income students
+                  in Nigeria to join the EducationUSA Opportunity Funds Program (OFP).
+                </p>
+                <p>
+                  OFP’s mission is to assist talented and determined, low-income students
+                  who are good candidates for financial assistance from U.S. colleges and
+                  universities but lack the financial resources to cover the up-front cost
+                  of obtaining admission. 
+                </p>
+                <p>
+                  Since 2004, the EducationUSA Opportunity Funds Program
+                  has placed 315 students at the most selective colleges and universities in
+                  North America with full aid.
+                </p>
+              </div>
+            </div>
+            <div data-tab-target="2" class="">
+
+            </div>
+          </div>
+        </section>
+      </div>
     </main>
 
     <footer>
@@ -181,6 +224,7 @@
       integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
       crossorigin="anonymous"
     ></script> -->
-    <script type="text/javascript" src="/javascript/index.js"></script>
+    <script type="text/javascript" src="/javascript/menu.js"></script>
+    <script type="text/javascript" src="/javascript/tabs.js"></script>
   </body>
 </html>
