--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                   News
                 </div>
                 <div data-menu-index="5" class="menu-link">
-                  <a href="/index.html">Apply</a>
+                  <a href="/application.html">Apply</a>
                 </div>
                 <div data-menu-index="6" class="menu-link"><a href="">Login</a></div>
               </div>
@@ -283,6 +283,6 @@
     </div>
   </footer>
 
-    <script type="text/javascript" src="/javascript/index.js"></script>
+    <script type="text/javascript" src="/javascript/menu.js"></script>
   </body>
 </html>
