--- a/index.html
+++ b/index.html
@@ -365,6 +365,22 @@
     </div>
 
     <div class="section-wrapper">
+      <section class="section-container split-row">
+        <div class="row-half right">
+          <div class="large-text text-header">
+            Most Recent Updates
+          </div>
+          <div class="medium-text">
+            At EducationUSA, our vision is to be the preferred financial service provider, offering innovative mortgage and real estate finance solutions.
+          </div>
+        </div>
+        <div class="row-half left master">
+          
+        </div>
+      </section>
+    </div>
+
+    <div class="section-wrapper">
       <section id="entertainment-section" class="section-container">
         <div class="section-header">
           <span class="large-text header-text">
@@ -376,7 +392,7 @@
             <div class="top-accent"></div>
           </div>
         </div>
-        <section class="split-row">
+        <div class="split-row">
           <div class="left row-half">
             <span class="sub-text">
               Keeping you informed with events at EducationUSA.
@@ -394,7 +410,7 @@
               ></iframe>
             </div>
           </div>
-        </section>
+        </div>
       </section>
     </div>
 
@@ -497,6 +513,7 @@
     </div>
   </footer>
 
+  <script type="text/javascript" src="/javascript/menu.js"></script>
   <script type="text/javascript" src="/javascript/index.js"></script>
 </body>
 </html>
