--- a/contact.html
+++ b/contact.html
@@ -38,12 +38,16 @@
           <div id="navigation-wrapper">
             <div class="menu-links-wrapper">
               <div class="menu-links">
-                <div data-menu-index="0" class="menu-link">
-                  <a href="/index.html">Home</a>
-                </div>
-                <div data-menu-index="1" class="menu-link">
-                  <a href="/aboutUs.html">About Us</a>
-                </div>
+                <a href="/index.html">
+                  <div data-menu-index="0" class="menu-link">
+                    Home
+                  </div>
+                </a>
+                <a href="/aboutUs.html">
+                  <div data-menu-index="1" class="menu-link">
+                    About Us
+                  </div>
+                </a>
                 <div data-menu-index="2" class="menu-link">Scholars</div>
                 <div data-menu-index="3" class="menu-link">
                   Impact
@@ -51,10 +55,16 @@
                 <div data-menu-index="4" class="menu-link">
                   News
                 </div>
-                <div data-menu-index="5" class="menu-link">
-                  <a href="/application.html">Apply</a>
-                </div>
-                <div data-menu-index="6" class="menu-link"><a href="">Login</a></div>
+                <a href="/application.html">
+                  <div data-menu-index="5" class="menu-link selected">
+                    Apply
+                  </div>
+                </a>
+                <a href="#">
+                  <div data-menu-index="6" class="menu-link">
+                    Login
+                  </div>
+                </a>
               </div>
             </div>
           </div>
