--- a/aboutUs.html
+++ b/aboutUs.html
@@ -39,12 +39,16 @@
           <div id="navigation-wrapper">
             <div class="menu-links-wrapper">
               <div class="menu-links">
-                <div data-menu-index="0" class="menu-link">
-                  <a href="/index.html">Home</a>
-                </div>
-                <div data-menu-index="1" class="menu-link selected">
-                  <a href="/aboutUs.html">About Us</a>
-                </div>
+                <a href="/index.html">
+                  <div data-menu-index="0" class="menu-link">
+                    Home
+                  </div>
+                </a>
+                <a href="/aboutUs.html">
+                  <div data-menu-index="1" class="menu-link selected">
+                    About Us
+                  </div>
+                </a>
                 <div data-menu-index="2" class="menu-link">Scholars</div>
                 <div data-menu-index="3" class="menu-link">
                   Impact
@@ -52,10 +56,16 @@
                 <div data-menu-index="4" class="menu-link">
                   News
                 </div>
-                <div data-menu-index="5" class="menu-link">
-                  <a href="/application.html">Apply</a>
-                </div>
-                <div data-menu-index="6" class="menu-link"><a href="">Login</a></div>
+                <a href="/application.html">
+                  <div data-menu-index="5" class="menu-link">
+                    Apply
+                  </div>
+                </a>
+                <a href="#">
+                  <div data-menu-index="6" class="menu-link">
+                    Login
+                  </div>
+                </a>
               </div>
             </div>
           </div>
@@ -106,9 +116,7 @@
           </div>
           <div id="about-tab-details" class="row-half right wider-master">
             <div data-tab-target="1" class="selected">
-              <div class="image">
-
-              </div>
+              <div class="about-image"></div>
               <div class="header-text medium-text">
                 About Us
               </div>
@@ -134,7 +142,9 @@
               </div>
             </div>
             <div data-tab-target="2" class="">
-
+              <div class="header-text medium-text">
+                Project Timeline
+              </div>
             </div>
           </div>
         </section>
